# cambioml-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
computer_use_demo/: api.py  database.py  env.py  models.py  runner.py  session_manager.py
frontend/: app.js  index.html
image/: entrypoint.sh
