[project]
name = "combioml-test"
version = "0.1.0"
description = "Scalable Computer Use Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock,vertex]>=0.39.0",
    "asyncpg>=0.31.0",
    "boto3>=1.28.57",
    "docker>=7.1.0",
    "fastapi>=0.136.0",
    "google-auth>=2,<3",
    "httpx>=0.28.1",
    "jsonschema==4.22.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
